# CONSTRUCTION-MANAGEMENT-SYSTEM

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.render  PROJECT_COMPLETE.md  README.md  SETUP.md  buildpro.html  docker-compose.yml  render.yaml  start.bat  start.sh
backend/: Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  bootstrap.py  models.py  serializers.py  throttles.py  urls.py  views.py
backend/apps/ai/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/changes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/comms/: models.py  serializers.py  urls.py  views.py
backend/apps/core/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/cost/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/documents/: models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/apps/field_ops/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/labour/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/procurement/: models.py  serializers.py  urls.py  views.py
backend/apps/projects/: models.py  serializers.py  setup.py  urls.py  views.py
backend/apps/reports/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/resources/: models.py  (+3 more)
backend/buildpro/: asgi.py  celery.py  urls.py  views.py  wsgi.py
backend/requirements/: base.txt  development.txt  production.txt
(+312 files in other folders)
