[project]
name = "buildpro"
version = "0.1.0"
description = "BuildPro — Construction Project Management Platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "buildpro"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "buildpro.settings.development"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "buildpro.settings.development"
